--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -72,6 +72,10 @@ div .container {
 }
 
 .header {
-  font-size: medium;
+  font-size: large;
+  border: none;
+  border-style: none;
+  padding: 5px;
+  margin: 2px;
 
 }
