--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -21,7 +21,8 @@ div .container {
   display: flex;
   justify-content: center; 
   align-items: center;
-  height: 100vh
+  height: 100vh;
+
 }
 
 .column {
